DLS Elog now write to production database

--- a/products/DLS/plugins/org.csstudio.logbook.dls/preferences.ini
+++ b/products/DLS/plugins/org.csstudio.logbook.dls/preferences.ini
@@ -4,10 +4,10 @@
 # in its plugin_preferences.ini 
 
 # Debug database
-log_rdb_url=jdbc:oracle:thin:@//rdb.pri.diamond.ac.uk:1521/csdevl
+# log_rdb_url=jdbc:oracle:thin:@//rdb.pri.diamond.ac.uk:1521/csdevl
 
 # Production database
-# log_rdb_url=jdbc:oracle:thin:@//rdb.pri.diamond.ac.uk:1521/csprod
+log_rdb_url=jdbc:oracle:thin:@//rdb.pri.diamond.ac.uk:1521/csprod
 
 # User/password for listing available logbooks
 # (read-only, not for making entries)
