CSS-24 Add MuxMenu control

--- a/products/DLS/plugins/org.csstudio.opibuilder.widgets.edm/plugin.xml
+++ b/products/DLS/plugins/org.csstudio.opibuilder.widgets.edm/plugin.xml
@@ -14,5 +14,17 @@
             typeId="org.csstudio.opibuilder.widgets.edm.symbolwidget">
       </widget>
    </extension>
+   <extension
+         point="org.csstudio.opibuilder.widget">
+      <widget
+            category="Monitors"
+            description="Edm style muxMenu widget"
+            editpart_class="org.csstudio.opibuilder.widgets.edm.editparts.MuxMenuEditPart"
+            icon="icon/symbol.png"
+            model_class="org.csstudio.opibuilder.widgets.edm.model.MuxMenuModel"
+            name="MuxMenu Widget"
+            typeId="org.csstudio.opibuilder.widgets.edm.muxmenuwidget">
+      </widget>
+   </extension>
 
 </plugin>
