--- a/applications/plugins/org.csstudio.archive.reader.fastarchiver/plugin.xml
+++ b/applications/plugins/org.csstudio.archive.reader.fastarchiver/plugin.xml
@@ -9,5 +9,13 @@
             prefix="fads">
       </ArchiveReader>
    </extension>
+   <extension
+         point="org.csstudio.utility.pvmanager.datasource">
+      <datasource
+            datasource="org.csstudio.utility.pvmanager.fa.FADataSource"
+            name="FADataSource"
+            prefix="fads">
+      </datasource>
+   </extension>
 
 </plugin>
