Changed prefix of PVs from fads to fa

--- a/applications/plugins/org.csstudio.archive.reader.fastarchiver/plugin.xml
+++ b/applications/plugins/org.csstudio.archive.reader.fastarchiver/plugin.xml
@@ -14,7 +14,7 @@
       <datasource
             datasource="org.csstudio.utility.pvmanager.fa.FADataSource"
             name="FADataSource"
-            prefix="fads">
+            prefix="fa">
       </datasource>
    </extension>
 
