--- a/products/DLS/plugins/org.csstudio.product/plugin_customization.ini
+++ b/products/DLS/plugins/org.csstudio.product/plugin_customization.ini
@@ -78,12 +78,15 @@ org.csstudio.platform.libs.epics/max_array_bytes=160000
 # Data Browser
 # Removal of these settings results in empty defaults
 # URLs to suggest in the "Archives" view
-org.csstudio.trends.databrowser2/urls=xnds://archiver.pri.diamond.ac.uk/archive/cgi/ArchiveDataServer.cgi*xnds://archiver2.pri.diamond.ac.uk/archive/cgi/ArchiveDataServer.cgi
+org.csstudio.trends.databrowser2/urls=xnds://archiver.pri.diamond.ac.uk/archive/cgi/ArchiveDataServer.cgi*xnds://archiver2.pri.diamond.ac.uk/archive/cgi/ArchiveDataServer.cgi*fads://fa-archiver:8888
 
 # Default data sources for newly added channels
 # Format:  <name>|<key>|<url>
 # xnds: URLs use the key. Other URLs might ignore the key.
 org.csstudio.trends.databrowser2/archives=All-(Primary Archiver)|1|xnds://archiver.pri.diamond.ac.uk/archive/cgi/ArchiveDataServer.cgi*All-(Standby Archiver)|2|xnds://archiver2.pri.diamond.ac.uk/archive/cgi/ArchiveDataServer.cgi
+
+# Use Autoscale axis on databrowser by deafult
+org.csstudio.trends.databrowser2/use_auto_scale=true
 
 ## Authentication
 org.csstudio.security/jaas_config_file=platform:/plugin/org.csstudio.product/jaas.conf
